# grokking-deep-learning

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/chapter10/: mod.rs
src/chapter11/: mod.rs
src/chapter12/: mod.rs
src/chapter13/: mod.rs
src/chapter3/: mod.rs
src/chapter4/: mod.rs
src/chapter5/: mod.rs
src/chapter6/: mod.rs
src/chapter8/: mod.rs
src/chapter9/: mod.rs
src/utils/: mod.rs
