[package]
name = "grokking-deep-learning"
version = "0.1.0"
edition = "2021"

[dependencies]
faer = "0.19.3"
itertools = "0.13.0"
mnist = { version = "0.6.0", features = ["download"] }
nalgebra = "0.33.0"
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
ndarray-stats = "0.6.0"
rand_chacha = "0.3.1"
log = "0.4"
curl = "0.4"
pbr = "1.0"

[profile.dev.package.faer]
opt-level = 3
